--- a/AplikacijaZaZeljeznickuStanicuDRAOS2/Properties/Resources.resx
+++ b/AplikacijaZaZeljeznickuStanicuDRAOS2/Properties/Resources.resx
@@ -145,13 +145,16 @@
   <data name="helpbtn2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Help Button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Flag_of_Turkey" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Flag_of_Turkey.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bosnian" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bosnian.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="german" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\german.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bosnian" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bosnian.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Flag_of_Turkey" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Flag_of_Turkey.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Help Button 2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Help Button 2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
